refactored some js, ruby. added cap file. added FlagList js singleton

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>GreVocab</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag "jquery.min.js" %>
+  <%= javascript_include_tag "jquery.cookie.min.js" %>
+  <%= javascript_include_tag "json2.min.js"%>
   <%= javascript_include_tag "utility.js"%>
   <%= javascript_include_tag "study.js" %>
   <%= csrf_meta_tag %>
